--- a/views/vwUser/details.hbs
+++ b/views/vwUser/details.hbs
@@ -9,7 +9,7 @@
   function getMoreFeedback() {
     var ajax = new XMLHttpRequest();
 
-    ajax.open("POST", `http://localhost:3000/user-courses/moreFB?id=${courseID}&offset=${offset}`, true);
+    ajax.open("POST", `/user-courses/moreFB?id=${courseID}&offset=${offset}`, true);
 
     ajax.onreadystatechange = function () {
       if (this.readyState == 4) {
