Access teacher public profile page from detail page

--- a/views/vwUser/details.hbs
+++ b/views/vwUser/details.hbs
@@ -281,7 +281,7 @@
   <div class="main-des">
     <h4>Instructor</h4>
     <p class="instructor-name mt-2">
-      <a class="instructor-name" href="javascript:;">
+      <a class="instructor-name" href="/teacher/public?id={{teacher.teacherID}}">
           Dr. {{teacher.teacherName}}
       </a>
     </p>
