--- a/views/vwTeacher/public.hbs
+++ b/views/vwTeacher/public.hbs
@@ -38,7 +38,11 @@
         <div class="px-4 py-3">
             <h4 id="#about" class="mb-1">About</h4>
             <div class="p-4 rounded shadow-sm bg-light">
-                {{{this.teacher.description}}}
+                <div><small>Facebook link <i class="fa fa-facebook-square" aria-hidden="true"></i>: <a href="{{this.teacher.fb_link}}">{{this.teacher.fb_link}}</a></small></div>
+                <div><Small>Linkedin <i class="fa fa-linkedin-square" aria-hidden="true"></i>: <a href="{{this.teacher.linkedin}}">{{this.teacher.linkedin}}</a></small></div>
+                <div><Small>Email <i class="fa fa-inbox" aria-hidden="true"></i>: <a href="{{this.teacher.email}}">{{this.teacher.email}}</a></small></div>
+                <div><h5> </h5></div>
+                <div>{{{this.teacher.description}}}</div>
             </div>
         </div>
         <div class="py-4 px-4">
