--- a/views/vwStudent/lectures.hbs
+++ b/views/vwStudent/lectures.hbs
@@ -121,7 +121,7 @@
         function getMoreFeedback() {
             var ajax = new XMLHttpRequest();
 
-            ajax.open("POST", `http://localhost:3000/user-courses/moreFB?id=${courseID}&offset=${offset}`, true);
+            ajax.open("POST", `https://online-academy-5horses.herokuapp.com/user-courses/moreFB?id=${courseID}&offset=${offset}`, true);
 
             ajax.onreadystatechange = function () {
             if (this.readyState == 4) {
