--- a/views/home.hbs
+++ b/views/home.hbs
@@ -92,33 +92,49 @@
     <div class="row">
         <div class="col-12">
             <div class="mt-3 ml-3 mr-3 mb-5">
-                <h4 class="bg-light">Most Popular Courses</h4>
+                <h2 class="bg-light">Most Popular Courses</h2>
                 <div class="swiper mySwiper1">
                     <div class="swiper-wrapper">
                         {{#each this.listTopNumberStudentCourses}}
                             <div class="swiper-slide">
-                                <a class="course-card-a" href="/user-courses/detail?catID={{this.catID}}&id={{this.courseID}}">
+                                <a class="course-card-a mb-3" href="/user-courses/detail?catID={{this.catID}}&id={{this.courseID}}">
                                     <div class="card border-0" style="height: 100%">
                                         <img class="card-img-top"
                                              src="https://drive.google.com/uc?export=view&id={{this.image}}"
                                         alt="Card image cap">
                                         <div class="card-body" style="height: 60%">
                                             <div class="d-flex justify-content-start">
-                                                <h5 class="card-title text-left">{{this.courseName}}</h5>
+                                                <h5 class="card-title text-left" style="margin-top: -10px;">{{this.courseName}}</h5>
                                             </div>
+                                            <p class="text-left" style="color:rgb(160, 164, 147); margin-top: -10px; margin-bottom: -15px">{{this.teacherName}}</p>
                                             <p class="card-text">
-                                                                        <span>
-                                            <div class="checked w-100 d-flex flex-column"
-                                                 style="font-size: medium; height: 30%">
-                                                <div class="d-flex justify-content-start">
-                                                    {{this.rating}}&nbsp;
-                                                    <div>{{{printStarByDouble this.rating}}} </div>
-                                                </div>
+                                            <span>
+                                                <div class="checked w-100 d-flex flex-column"
+                                                    style="font-size: medium; height: 30%">
+                                                    <div class="d-flex justify-content-start">
+                                                        {{this.rating}}&nbsp;
+                                                        <div>{{{printStarByDouble this.rating}}} </div>&nbsp;
+                                                        <span style="color:rgb(160, 164, 147)">({{this.student_num}})</span>
+                                                    </div>
 
-                                                <div class="text-dark d-flex justify-content-start"
-                                                     style="height: 10%">{{this.rating_num}} reviews
+                                                    <div class="text-dark text-left justify-content-start"
+                                                        style="height: 10%">
+                                                        {{#if hasPromotion}}
+                                                        <span class="price">₫{{format_number promotion}}</span>
+                                                        <span class="old-price">₫{{format_number price}}</span>
+                                                        {{else}}
+                                                        <span class="price">₫{{format_number price}}</span>
+                                                        {{/if}}
+                                                    </div>
+                                                    <div class="text-left mt-2">
+                                                        {{#if isBestseller}}
+                                                            <span class="bestseller">Bestseller</span>
+                                                        {{/if}}
+                                                        {{#if isNew}}
+                                                            <span class="new">New</span>
+                                                        {{/if}}
+                                                    </div>
                                                 </div>
-                                            </div>
                                             </span>
 
                                             </p>
@@ -136,33 +152,49 @@
             </div>
 
             <div class="mt-3 ml-3 mr-3 mb-5">
-                <h4 class="bg-light">Most-viewed Courses</h4>
+                <h2 class="bg-light">Most-viewed Courses</h2>
                 <div class="swiper mySwiper2">
                     <div class="swiper-wrapper">
                         {{#each this.listDescendingCourses}}
-                            <div class="swiper-slide border-0">
-                                <a class="course-card-a" href="/user-courses/detail?catID={{this.catID}}&id={{this.courseID}}">
+                            <div class="swiper-slide">
+                                <a class="course-card-a mb-3" href="/user-courses/detail?catID={{this.catID}}&id={{this.courseID}}">
                                     <div class="card border-0" style="height: 100%">
                                         <img class="card-img-top"
                                              src="https://drive.google.com/uc?export=view&id={{this.image}}"
                                         alt="Card image cap">
                                         <div class="card-body" style="height: 60%">
                                             <div class="d-flex justify-content-start">
-                                                <h5 class="card-title text-left">{{this.courseName}}</h5>
+                                                <h5 class="card-title text-left" style="margin-top: -10px;">{{this.courseName}}</h5>
                                             </div>
+                                            <p class="text-left" style="color:rgb(160, 164, 147); margin-top: -10px; margin-bottom: -15px">{{this.teacherName}}</p>
                                             <p class="card-text">
-                                                                        <span>
-                                            <div class="checked w-100 d-flex flex-column"
-                                                 style="font-size: medium; height: 30%">
-                                                <div class="d-flex justify-content-start">
-                                                    {{this.rating}}&nbsp;
-                                                    <div>{{{printStarByDouble this.rating}}} </div>
-                                                </div>
+                                            <span>
+                                                <div class="checked w-100 d-flex flex-column"
+                                                    style="font-size: medium; height: 30%">
+                                                    <div class="d-flex justify-content-start">
+                                                        {{this.rating}}&nbsp;
+                                                        <div>{{{printStarByDouble this.rating}}} </div>&nbsp;
+                                                        <span style="color:rgb(160, 164, 147)">({{this.student_num}})</span>
+                                                    </div>
 
-                                                <div class="text-dark d-flex justify-content-start"
-                                                     style="height: 10%">{{this.rating_num}} reviews
+                                                    <div class="text-dark text-left justify-content-start"
+                                                        style="height: 10%">
+                                                        {{#if hasPromotion}}
+                                                        <span class="price">₫{{format_number promotion}}</span>
+                                                        <span class="old-price">₫{{format_number price}}</span>
+                                                        {{else}}
+                                                        <span class="price">₫{{format_number price}}</span>
+                                                        {{/if}}
+                                                    </div>
+                                                    <div class="text-left mt-2">
+                                                        {{#if isBestseller}}
+                                                            <span class="bestseller">Bestseller</span>
+                                                        {{/if}}
+                                                        {{#if isNew}}
+                                                            <span class="new">New</span>
+                                                        {{/if}}
+                                                    </div>
                                                 </div>
-                                            </div>
                                             </span>
 
                                             </p>
@@ -180,33 +212,49 @@
             </div>
 
             <div class="mt-3 ml-3 mr-3 mb-5">
-                <h4 class="bg-light">Newest Courses</h4>
+                <h2 class="bg-light">Newest Courses</h2>
                 <div class="swiper mySwiper3">
                     <div class="swiper-wrapper">
                         {{#each this.listLastestCourses}}
-                            <div class="swiper-slide border-0">
-                                <a class="course-card-a" href="/user-courses/detail?catID={{this.catID}}&id={{this.courseID}}">
+                            <div class="swiper-slide">
+                                <a class="course-card-a mb-3" href="/user-courses/detail?catID={{this.catID}}&id={{this.courseID}}">
                                     <div class="card border-0" style="height: 100%">
                                         <img class="card-img-top"
                                              src="https://drive.google.com/uc?export=view&id={{this.image}}"
                                         alt="Card image cap">
                                         <div class="card-body" style="height: 60%">
                                             <div class="d-flex justify-content-start">
-                                                <h5 class="card-title text-left">{{this.courseName}}</h5>
+                                                <h5 class="card-title text-left" style="margin-top: -10px;">{{this.courseName}}</h5>
                                             </div>
+                                            <p class="text-left" style="color:rgb(160, 164, 147); margin-top: -10px; margin-bottom: -15px">{{this.teacherName}}</p>
                                             <p class="card-text">
-                                                                        <span>
-                                            <div class="checked w-100 d-flex flex-column"
-                                                 style="font-size: medium; height: 30%">
-                                                <div class="d-flex justify-content-start">
-                                                    {{this.rating}}&nbsp;
-                                                    <div>{{{printStarByDouble this.rating}}} </div>
-                                                </div>
+                                            <span>
+                                                <div class="checked w-100 d-flex flex-column"
+                                                    style="font-size: medium; height: 30%">
+                                                    <div class="d-flex justify-content-start">
+                                                        {{this.rating}}&nbsp;
+                                                        <div>{{{printStarByDouble this.rating}}} </div>&nbsp;
+                                                        <span style="color:rgb(160, 164, 147)">({{this.student_num}})</span>
+                                                    </div>
 
-                                                <div class="text-dark d-flex justify-content-start"
-                                                     style="height: 10%">{{this.rating_num}} reviews
+                                                    <div class="text-dark text-left justify-content-start"
+                                                        style="height: 10%">
+                                                        {{#if hasPromotion}}
+                                                        <span class="price">₫{{format_number promotion}}</span>
+                                                        <span class="old-price">₫{{format_number price}}</span>
+                                                        {{else}}
+                                                        <span class="price">₫{{format_number price}}</span>
+                                                        {{/if}}
+                                                    </div>
+                                                    <div class="text-left mt-2">
+                                                        {{#if isBestseller}}
+                                                            <span class="bestseller">Bestseller</span>
+                                                        {{/if}}
+                                                        {{#if isNew}}
+                                                            <span class="new">New</span>
+                                                        {{/if}}
+                                                    </div>
                                                 </div>
-                                            </div>
                                             </span>
 
                                             </p>
@@ -224,22 +272,22 @@
             </div>
 
             <div class="mt-3 ml-3 mr-3 mb-5">
-                <h4 class="bg-light">Most Popular Categories</h4>
+                <h2 class="bg-light">Most Popular Categories</h2>
                 <div class="swiper mySwiper4">
                     <div class="swiper-wrapper">
-                        {{#each this.listMostEnrolledCourses}}
+                        {{#each this.listMostEnrolledCategories}}
                             <div class="swiper-slide border-0">
-                                <a class="course-card-a" href="/user-courses/detail?catID={{this.catID}}&id={{this.courseID}}">
+                                <a class="course-card-a" href="/user-courses/category/{{this.catID}}">
                                     <div class="card border-0" style="height: 100%">
-                                        <img class="card-img-top"
+                                        {{!-- <img class="card-img-top"
                                              src="https://drive.google.com/uc?export=view&id={{this.image}}"
-                                        alt="Card image cap">
+                                        alt="Card image cap"> --}}
                                         <div class="card-body" style="height: 60%">
-                                            <div class="d-flex justify-content-start">
-                                                <h5 class="card-title text-left">{{this.courseName}}</h5>
+                                            <div class="d-flex justify-content-start category-box">
+                                                <h5 class="card-title text-left">{{this.catName}}</h5>
                                             </div>
-                                            <p class="card-text">
-                                                                        <span>
+                                            {{!-- <p class="card-text">
+                                            <span>
                                             <div class="checked w-100 d-flex flex-column"
                                                  style="font-size: medium; height: 30%">
                                                 <div class="d-flex justify-content-start">
@@ -253,7 +301,7 @@
                                             </div>
                                             </span>
 
-                                            </p>
+                                            </p> --}}
 
                                         </div>
                                     </div>
