--- a/views/layouts/main1.hbs
+++ b/views/layouts/main1.hbs
@@ -206,23 +206,63 @@
 
 
 <footer>
-    <div class="gradient-home d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
-        <!-- Copyright -->
-        <div class="text-dark mb-3 mb-md-0">
-            5Horses Online Academy 2022. All rights reserved
-        </div>
-        <!-- Copyright -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-md-6">
+                <h3>Site Map</h3>
+                <ul class="list-unstyled">
+                    <li><a href="/">Home</a></li>
+                    <li>Services</li>
+                    <li>About</li>
+                </ul>
+            </div>
 
-        <!-- Right -->
-        <div>
-            <a href="#!" class="text-white me-4">
-                <i class="fa fa-facebook-official"></i>
-            </a>
-            <a href="#!" class="text-white me-4 text-danger">
-                <i class="fa fa-google"></i>
-            </a>
+            <div class="col-lg-4 col-md-6">
+                <h3>Latest Articles</h3>
+                <div class="media">
+                    <a href="#" class="pull-left">
+                        <img src="/imgs/sec_logo.jpg" alt="" class="media-object" />
+                    </a>
+                    <div class="media-body">
+                        <h4 class="media-heading">Security</h4>
+                        <p>Programming is very exhaustful</p>
+                    </div>
+                </div>
+
+                <div class="media">
+                    <a href="#" class="pull-left">
+                        <img src="/imgs/coding_logo.jpg" alt="" class="media-object" />
+                    </a>
+                    <div class="media-body">
+                        <h4 class="media-heading">Coding</h4>
+                        <p>Coding is magic</p>
+                    </div>
+                </div>
+
+                <div class="media">
+                    <a href="#" class="pull-left">
+                        <img src="/imgs/design_logo.jpg" alt="" class="media-object" />
+                    </a>
+                    <div class="media-body">
+                        <h4 class="media-heading">Web Design</h4>
+                        <p>God bless you.</p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col-lg-4">
+                <h3>Our Work</h3>
+                <img class="img-thumbnail" src="http://placehold.it/150x100" alt="" />
+                <img class="img-thumbnail" src="http://placehold.it/150x100" alt="" />
+                <img class="img-thumbnail" src="http://placehold.it/150x100" alt="" />
+                <img class="img-thumbnail" src="http://placehold.it/150x100" alt="" />
+            </div>
+
         </div>
-        <!-- Right -->
+    </div>
+    <div class="copyright text-center">
+        Copyright &copy; 2023 <span>5Horses Online Academy</span>
     </div>
 </footer>
 
