--- a/views/layouts/main1.hbs
+++ b/views/layouts/main1.hbs
@@ -223,7 +223,7 @@
                     <a href="#" class="pull-left">
                         <img src="/imgs/sec_logo.jpg" alt="" class="media-object" />
                     </a>
-                    <div class="media-body">
+                    <div class="media-body ml-1">
                         <h4 class="media-heading">Security</h4>
                         <p>Programming is very exhaustful</p>
                     </div>
@@ -233,7 +233,7 @@
                     <a href="#" class="pull-left">
                         <img src="/imgs/coding_logo.jpg" alt="" class="media-object" />
                     </a>
-                    <div class="media-body">
+                    <div class="media-body ml-1">
                         <h4 class="media-heading">Coding</h4>
                         <p>Coding is magic</p>
                     </div>
@@ -243,7 +243,7 @@
                     <a href="#" class="pull-left">
                         <img src="/imgs/design_logo.jpg" alt="" class="media-object" />
                     </a>
-                    <div class="media-body">
+                    <div class="media-body ml-1">
                         <h4 class="media-heading">Web Design</h4>
                         <p>God bless you.</p>
                     </div>
