+ add pagination in home for others sliders.

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -60,7 +60,7 @@
             loop: true,
             loopFillGroupWithBlank: true,
             pagination: {
-                el: ".swiper-pagination5",
+                el: ".swiper-pagination4",
                 clickable: true,
             },navigation: {
                 nextEl: ".mySwiper4 .swiper-button-next",
@@ -207,7 +207,7 @@
                     </div>
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
-                    <div class="swiper-pagination"></div>
+                    <div class="swiper-pagination2 d-flex justify-content-center"></div>
                 </div>
             </div>
 
@@ -267,7 +267,7 @@
                     </div>
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
-                    <div class="swiper-pagination"></div>
+                    <div class="swiper-pagination3 d-flex justify-content-center"></div>
                 </div>
             </div>
 
@@ -311,7 +311,7 @@
                     </div>
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
-                    <div class="swiper-pagination"></div>
+                    <div class="swiper-pagination4 d-flex justify-content-center"></div>
                 </div>
             </div>
 
