fix category's links in navbar

--- a/views/layouts/main1.hbs
+++ b/views/layouts/main1.hbs
@@ -39,7 +39,7 @@
                   <ul class="dropdown-menu">
                     {{#each lcCategories}}
                       <li>
-                          <a class="dropdown-item" href="/course/category/{{catID}}">{{catName}}</a>
+                          <a class="dropdown-item" href="/user-courses/category/{{catID}}">{{catName}}</a>
                       </li>
                     {{/each}}
                   </ul>
