--- a/views/vwAdmin/byField.hbs
+++ b/views/vwAdmin/byField.hbs
@@ -5,6 +5,10 @@
             <i class="fa fa-plus" aria-hidden="true"></i>
             Add Field
         </a>
+        <a class="btn btn-outline-success mr-4" href="/admin" role="button">
+            <i class="fa fa-backward" aria-hidden="true"></i>
+            Back
+        </a>
     </h4>
     {{#if this.empty}}
         <div class="card-body">
