DB script and fix show more feedback in detail page

--- a/views/vwUser/details.hbs
+++ b/views/vwUser/details.hbs
@@ -3,7 +3,7 @@
 
   var offset = 4;
   var courseID = {{course.courseID}};
-  var userID = {{authUser.userID}};
+  var userID = {{userID}};
   var totalFb = {{totalFb}};
 
   function getMoreFeedback() {
