+ update ui of editCourse.hbs

--- a/views/vwTeacher/editCourse.hbs
+++ b/views/vwTeacher/editCourse.hbs
@@ -153,13 +153,13 @@
         });
     </script>
 </head>
-<div class="d-lg-flex justify-content-lg-center" style="font-size: 14px; background-size: cover; height: 100%; width: 100%; background-position: center; background-image: url(https://images.pexels.com/photos/397998/pexels-photo-397998.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2)">
+<div class="d-lg-flex justify-content-lg-center gradient-upload-pizelex" style="font-size: 14px; background-size: cover; height: 100%; width: 100%; background-position: center;">
     <div class="contents order-2 order-md-1">
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-10 py-5 text-white">
                     <h2 class="font-weight-bold font-italic">Create new course</h2>
-                    <div class="bg-secondary rounded">
+                    <div class="glass">
                         <blockquote
                                 class="mb-0 font-weight-bold d-flex"
                                 style="font: 1.4rem/1.8rem Georgia, serif;
@@ -282,9 +282,9 @@
                             <div class="col-md-12">
                                 <div class="form-group first">
                                     <label for="Files" style="font-size: 32px;" class="font-weight-bold mb-3">Course Image</label>
-                                    <div class="file-upload">
+                                    <div class="file-upload glass">
                                         <button
-                                                class="file-upload-btn"
+                                                class="file-upload-btn gradient-upload-haikus"
                                                 type="button"
                                                 onclick="$('.file-upload-input').trigger(
                                             'click' )"
